# Planetshader

./: .gitignore  Cargo.toml
SDL2_gfx-1.0.4/: Makefile  config.status  libtool
SDL2_gfx-1.0.4/.deps/: SDL2_framerate.Plo  SDL2_gfxPrimitives.Plo  SDL2_imageFilter.Plo  SDL2_rotozoom.Plo
SDL2_gfx-1.0.4/.libs/: libSDL2_gfx-1.0.so.0.0.2
src/: atmoshphere.rs  background.rs  converter.rs  dataStructures.rs  landmass.rs  main.rs  planet.rs  test.rs
