[package]
name = "planets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
noise = "*"

[dependencies.sdl2]
version = "0.35"
git = "https://github.com/rust-sdl2/rust-sdl2"
features = ["gfx"]
